[gd_scene load_steps=3 format=3 uid="uid://dkurtulus_settings"]

[ext_resource type="Script" path="res://scenes/settings/settings.gd" id="1_script"]
[ext_resource type="FontFile" path="res://assets/alfabet98.ttf" id="2_font"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.101961, 0.0392157, 0.0392157, 1)

[node name="ContentContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="PanelContainer" parent="ContentContainer"]
custom_minimum_size = Vector2(500, 300)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ContentContainer/Panel"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="Title" type="Label" parent="ContentContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.992157, 0.815686, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 48
text = "Settings"
horizontal_alignment = 1

[node name="PlaceholderLabel" type="Label" parent="ContentContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.831373, 0.686275, 0.215686, 0.7)
theme_override_font_sizes/font_size = 24
text = "Coming Soon..."
horizontal_alignment = 1

[node name="BackButton" type="Button" parent="ContentContainer/Panel/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 0.992157, 0.815686, 1)
theme_override_colors/font_hover_color = Color(0.831373, 0.686275, 0.215686, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 28
text = "Back"

[node name="TransitionLayer" type="CanvasLayer" parent="."]
layer = 10

[node name="FadeRect" type="ColorRect" parent="TransitionLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0)
